tests/old/pass/integers/u16/max_fail.leo
function main() {
    const a: u16 = 65536;
}