tests/old/fail/address/empty.leo
function main() {
    const owner = address();
}